# LearnGP

./: CMakeLists.txt  README.md
OpenGL/: CMakeLists.txt
OpenGL/GUI/: CMakeLists.txt
OpenGL/GUI/ImGuiImplementation/: CMakeLists.txt
OpenGL/GUI/ImGuiImplementation/src/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  main.cpp
OpenGL/HelloTriangle/: CMakeLists.txt
OpenGL/HelloTriangle/src/: main.cpp
OpenGL/HelloWindowBasicGLFW/: CMakeLists.txt
OpenGL/HelloWindowWithGLAD/: CMakeLists.txt
OpenGL/HelloWindowWithGLAD/src/: main.cpp
OpenGL/Shaders/: CMakeLists.txt
OpenGL/Shaders/include/Shaders/: Shader.hpp
OpenGL/Shaders/src/: Shader.cpp  main.cpp
